Fixed index mobile view gap between tab content and bottom content to 900px

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -548,7 +548,7 @@ nav button {
 @media (max-width: 500px) {
   .bottom-content {
     width: 100%;
-    height: 1100px;
+    height: 900px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
