--- a/LESS/footer.less
+++ b/LESS/footer.less
@@ -13,7 +13,7 @@
         @media @mobile {
                    
                     width: 100%;
-                    height: 1100px;
+                    height: 900px;
                     margin: 0 auto;
                     .displayFlex(center; center; column);
                     
